@@ -14,14 +14,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.9.5</aspectj.version>
         <allure.maven.version>2.10.0</allure.maven.version>
-        <allure.cucumber.jvm.version>2.13.1</allure.cucumber.jvm.version>
-        <allure.common.version>2.13.1</allure.common.version>
+        <allure.common.version>2.20.1</allure.common.version>
         <junit.version>4.12</junit.version>
         <surefire.version>2.22.2</surefire.version>
         <jdi.dark.bdd.version>1.1.12</jdi.dark.bdd.version>
         <!-- - - add-opens java.base/java.lang=ALL-UNNAMED is needed for JDK 16+ -->
         <aspectj.args></aspectj.args>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>jdk16</id>
+            <properties>
+                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
         <!--JDI-->
@@ -37,8 +45,8 @@
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-cucumber4-jvm</artifactId>
-            <version>${allure.cucumber.jvm.version}</version>
+            <artifactId>allure-cucumber7-jvm</artifactId>
+            <version>${allure.common.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -67,7 +75,6 @@
                     <argLine>
                         ${aspectj.args}
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                        -Dcucumber.options="--plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm"
                     </argLine>
                 </configuration>
                 <dependencies>
